--- a/software/MAUIBasics/MAUIBasics/Resources/Styles/Styles.xaml
+++ b/software/MAUIBasics/MAUIBasics/Resources/Styles/Styles.xaml
@@ -23,9 +23,24 @@
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
+    <Style TargetType="Button" x:Key="game-button">
+        <Setter Property="Background">
+            <LinearGradientBrush EndPoint="1,0">
+                <GradientStop Color="white" Offset="0"/>
+                <GradientStop Color="LightBlue" Offset=".3"/>
+                <GradientStop Color="Blue" Offset="1"/>
+            </LinearGradientBrush>
+        </Setter>
+    </Style>
     <Style TargetType="Button">
-        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource PrimaryDarkText}}" />
-        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
+        <Setter Property="BorderColor" Value="gray"/>
+        <Setter Property="BorderWidth" Value="4"/>
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Shadow">
+            <Shadow Brush="Black" Offset="10,10" Radius="20" Opacity=".8"/>
+        </Setter>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Primary}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="BorderWidth" Value="0"/>
