--- a/software/MAUIBasics/MAUIBasics/TicTacToe.xaml
+++ b/software/MAUIBasics/MAUIBasics/TicTacToe.xaml
@@ -3,27 +3,35 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIBasics.TicTacToe"
              Title="TicTacToe">
+    <ContentPage.Resources>
+        <Style TargetType="Button">
+            <Setter Property="CornerRadius" Value="30"/>
+        </Style>
+    </ContentPage.Resources>
     <Grid ColumnDefinitions="*" RowDefinitions="*,5*">
         <Grid ColumnDefinitions="*,Auto,Auto,*" RowDefinitions="*" Grid.Column="0" Grid.Row="0">
-            <Button Margin="20" Text="Start" Grid.Column="0" Grid.Row="0"/>
+            <Button Margin="20" Text="Start" Grid.Column="0" Grid.Row="0"
+                    TextTransform="Uppercase"
+                    FontSize="Medium"
+                    CharacterSpacing="3"
+                    />
             <RadioButton Content="2 Player" Grid.Column="1" Grid.Row="0"/>
+            <RadioButton Content="Play Against Computer" Grid.Column="2" Grid.Row="0"/>
             <RadioButton Content="Play Against Computer" Grid.Column="2" Grid.Row="0"/>
             <Label Text="Current Turn" Grid.Column="3" Grid.Row="0"
                    VerticalOptions="Center" HorizontalOptions="Center"
                    />
         </Grid>
-        <Grid Margin="20" ColumnDefinitions="*,*,*" RowDefinitions="*,*,*" Grid.Column="0" Grid.Row="1" ColumnSpacing="5" RowSpacing="5">
-            <Button Grid.Column="0" Grid.Row="0"/>
-            <Button Grid.Column="1" Grid.Row="0"/>
-            <Button Grid.Column="2" Grid.Row="0"/>
-
-            <Button Grid.Column="0" Grid.Row="1"/>
-            <Button Grid.Column="1" Grid.Row="1"/>
-            <Button Grid.Column="2" Grid.Row="1"/>
-
-            <Button Grid.Column="0" Grid.Row="2"/>
-            <Button Grid.Column="1" Grid.Row="2"/>
-            <Button Grid.Column="2" Grid.Row="2"/>
+        <Grid Margin="10" ColumnDefinitions="*,*,*" RowDefinitions="*,*,*" Grid.Column="0" Grid.Row="1" ColumnSpacing="5" RowSpacing="5">
+            <Button Grid.Column="0" Grid.Row="0" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="1" Grid.Row="0" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="2" Grid.Row="0" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="0" Grid.Row="1" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="1" Grid.Row="1" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="2" Grid.Row="1" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="0" Grid.Row="2" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="1" Grid.Row="2" Style="{StaticResource Key=game-button}"/>
+            <Button Grid.Column="2" Grid.Row="2" Style="{StaticResource Key=game-button}"/>
         </Grid>
     </Grid>
 </ContentPage>
