--- a/software/Calculator/Calculator/Resources/Styles/Styles.xaml
+++ b/software/Calculator/Calculator/Resources/Styles/Styles.xaml
@@ -23,14 +23,43 @@
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
+    <Style TargetType="Button" x:Key="operation-button">
+        <Setter Property="BorderWidth" Value="2"/>
+        <Setter Property="Background" >
+            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                <GradientStop Color="LightYellow" Offset="0.0" />
+                <GradientStop Color="LightPink" Offset="0.25" />
+                <GradientStop Color="LightBlue" Offset="0.75" />
+                <GradientStop Color="lightGreen" Offset="1.0" />
+            </LinearGradientBrush>
+        </Setter>
+
+    </Style>
+
+    <Style TargetType="Frame" x:Key="frame">
+        <Setter Property="BorderColor" Value="Black"/>
+    </Style>
+
+    <Style TargetType="Label" x:Key="label-frame">
+        <Setter Property="BackgroundColor" Value="LightGray"/>
+        <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+        <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+
+    </Style>
+
     <Style TargetType="Button">
-        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource PrimaryDarkText}}" />
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="BorderColor" Value="gray"/>
+        <Setter Property="BorderWidth" Value="6"/>
+        <Setter Property="Shadow">
+            <Shadow Brush="gray" Offset="10,10" Radius="20" Opacity=".7"/>
+        </Setter>
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource PrimaryDarkText}}" />
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="BorderWidth" Value="0"/>
-        <Setter Property="CornerRadius" Value="8"/>
-        <Setter Property="Padding" Value="14,10"/>
+        <Setter Property="Padding" Value="0"/>
         <Setter Property="MinimumHeightRequest" Value="44"/>
         <Setter Property="MinimumWidthRequest" Value="44"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
