--- a/software/MAUIBasics/MAUIBasics/Basic Controls.xaml
+++ b/software/MAUIBasics/MAUIBasics/Basic Controls.xaml
@@ -5,8 +5,10 @@
              Title="Basic Controls"
              BackgroundColor="Green">
     <VerticalStackLayout BackgroundColor="White" Margin="10" Spacing="10">
+        <Image Source="p1p.jpeg" HeightRequest="100"/>
         <Frame BorderColor="Black">
-            <Label x:Name="lblMessage" Text="Message"/>
+            <Label x:Name="lblMessage" Text="Hi there is a Message!!!"
+                   FontFamily="WINGDING"/>
         </Frame>
         <Label Text="Last Name" BackgroundColor="LightGreen"/>
         <Entry x:Name="txtLastName" Placeholder="Last Name"/>
