--- a/software/OOPBasics/OOPBasics/MainPage.xaml
+++ b/software/OOPBasics/OOPBasics/MainPage.xaml
@@ -11,6 +11,8 @@
             <Button x:Name="BindSchoolBtn" Text="Bind School" Grid.Column="1" Grid.Row="1" Clicked="BindSchoolBtn_Clicked"/>
             <Button x:Name="TeacherBtn" Text="Teacher" Grid.Column="0" Grid.Row="2" Clicked="TeacherBtn_Clicked"/>
             <Button x:Name="SchoolBtn" Text="School" Grid.Column="1" Grid.Row="2" Clicked="SchoolBtn_Clicked"/>
+            <Button x:Name="InheritanceBtn" Text="Inheritance" Grid.Column="0" Grid.Row="3" Clicked="InheritanceBtn_Clicked"/>
+            <Button x:Name="HWInheritanceBtn" Text="Inheritance HW" Grid.Column="1" Grid.Row="3" Clicked="HWInheritanceBtn_Clicked"/>
         </Grid>
         <Border Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" StrokeThickness="4">
             <Label x:Name="DisplayLbl" BackgroundColor="LightPink" FontSize="14"/>
@@ -28,7 +30,7 @@
             <Label x:Name="BindLbl4" BackgroundColor="LightPink" Text=" {Binding Subject}"/>
         </Border>
         <Border Grid.Row="6" Grid.Column="1" StrokeThickness="4">
-            <Label x:Name="BindLbl5" BackgroundColor="LightPink" Text=" {Binding tLastName}"/>
+            <Label x:Name="BindLbl5" BackgroundColor="LightPink" Text=" {Binding LastName}"/>
         </Border>
         <Border Grid.Row="7" Grid.Column="1" StrokeThickness="4">
             <Label x:Name="StaticLbl" BackgroundColor="LightPink" />
