--- a/software/OOPBasics/OOPBasics/MainPage.xaml
+++ b/software/OOPBasics/OOPBasics/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="OOPBasics.MainPage">
 
-    <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,*,*,*,*,*, *, *">
+    <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,*,*,*,*,*,*,*,*,*,*,*">
         <Grid Grid.Row="0" Grid.Column="0" ColumnDefinitions="*,*,*,*" RowDefinitions="*,*,*,*">
             <Button x:Name="PersonBtn" Text="Person" Grid.Column="0" Grid.Row="0" Clicked="PersonBtn_Clicked"/>
             <Button x:Name="FamilyBtn" Text="Family" Grid.Column="1" Grid.Row="0" Clicked="FamilyBtn_Clicked"/>
@@ -34,6 +34,18 @@
         </Border>
         <Border Grid.Row="7" Grid.Column="1" StrokeThickness="4">
             <Label x:Name="StaticLbl" BackgroundColor="LightPink" />
+        </Border>
+        <Border Grid.Row="8" Grid.Column="1" StrokeThickness="4">
+            <Label x:Name="AnimalLbl" BackgroundColor="LightPink"  Text=" {Binding Description}"/>
+        </Border>
+        <Border Grid.Row="9" Grid.Column="1" StrokeThickness="4">
+            <Label x:Name="AlienLbl" BackgroundColor="LightPink" Text=" {Binding Description}"/>
+        </Border>
+        <Border Grid.Row="10" Grid.Column="1" StrokeThickness="4">
+            <Label x:Name="StudentLbl" BackgroundColor="LightPink" Text=" {Binding Description}"/>
+        </Border>
+        <Border Grid.Row="11" Grid.Column="1" StrokeThickness="4">
+            <Label x:Name="AssistantLbl" BackgroundColor="LightPink" Text=" {Binding Description}"/>
         </Border>
     </Grid>
 
