--- a/software/MAUIBasics/MAUIBasics/AppShell.xaml
+++ b/software/MAUIBasics/MAUIBasics/AppShell.xaml
@@ -48,6 +48,11 @@
          Title="Centered Page"
          ContentTemplate="{DataTemplate local:CenteredPage}"
          Route="CenteredPage" />
+
+        <ShellContent
+         Title="FlexLayout Page"
+         ContentTemplate="{DataTemplate local:FlexLayoutPage}"
+         Route="FlexLayoutPage" />
     </TabBar>
 
 </Shell>
