--- a/software/JS-WebBasics/JS-WebBasics/Pages/Shared/_Layout.cshtml
+++ b/software/JS-WebBasics/JS-WebBasics/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/TicTacToe">Tic Tac Toe</a>
                         </li>
                         <li class="nav-item text-dark">
+                            <a class="nav-link text-dark" asp-page="/Tictactoejquery">Tic Tac Toe jQuery</a>
+                        </li>
+                        <li class="nav-item text-dark">
                             <a class="nav-link text-dark" asp-page="/Basics">Basics</a>
+                        </li>
+                        <li class="nav-item text-dark">
+                            <a class="nav-link text-dark" asp-page="/basicsJquery">Basics jQuery</a>
                         </li>
                     </ul>
                 </div>
