--- a/software/JS-WebBasics/JS-WebBasics/Pages/Shared/_Layout.cshtml
+++ b/software/JS-WebBasics/JS-WebBasics/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - JS_WebBasics</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/JS_WebBasics.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/JS-WebBasics.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -30,6 +30,15 @@
                         </li>
                         <li class="nav-item text-dark">
                             <a class="nav-link text-dark" asp-page="/basicsJquery">Basics jQuery</a>
+                        </li>
+                        <li class="nav-item text-dark">
+                            <a class="nav-link text-dark" asp-page="/typescriptBasics">Basics TypeScript</a>
+                        </li>
+                        <li class="nav-item text-dark">
+                            <a class="nav-link text-dark" asp-page="/Index1">TypeScript Fetch Object</a>
+                        </li>
+                        <li class="nav-item text-dark">
+                            <a class="nav-link text-dark" asp-page="/homework">Homework</a>
                         </li>
                     </ul>
                 </div>
