--- a/software/JS-WebBasics/JS-WebBasics/wwwroot/css/site.css
+++ b/software/JS-WebBasics/JS-WebBasics/wwwroot/css/site.css
@@ -41,3 +41,37 @@ body {
 .tie {
     background-color: gray
 }
+
+
+.form-container {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 10px;
+    max-width: 400px;
+    margin: 50px auto;
+}
+
+.form-header {
+    text-align: center;
+    color: #4a90e2;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.form-control {
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    width: 100%;
+    margin-top: 5px;
+    transition: border-color 0.3s;
+}
+
+#btnSubmit {
+    background-color: #4a90e2;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    width: 100%;
+}
