--- a/software/JS-WebBasics/JS-WebBasics/Pages/HeartyHearth.cshtml
+++ b/software/JS-WebBasics/JS-WebBasics/Pages/HeartyHearth.cshtml
@@ -6,9 +6,9 @@
 
 <h1 class="text-center mb-4" style="font-weight: bold">Hearty Hearth API</h1>
 <div class="d-flex justify-content-center mb-4">
-    <button class="btn btn-info me" onclick="loadRecipes()">View Recipes</button>
-    <button class="btn btn-info me" onclick="loadMeals()">View Meals</button>
-    <button class="btn btn-info" onclick="loadCookbooks()">View Cookbooks</button>
+    <button id="recipesButton" class="btn btn-info me" onclick="loadRecipes()"></button>
+    <button id="mealsButton" class="btn btn-info me" onclick="loadMeals()"></button>
+    <button id="cookbooksButton" class="btn btn-info" onclick="loadCookbooks()"></button>
 </div>
 
 <div id="output"></div>
